src/objects/Submission_Answer__c.object
<CustomObject>
    <description>Object to hold one answer to a survey</description>
    <fields>
        <fullName>Answer_Boolean__c</fullName>
        <formula>CASE( UPPER(Answer_Short_Text__c ) ,
&apos;YES&apos;, &apos;true&apos;,
&apos;1&apos;, &apos;true&apos;,
&apos;TRUE&apos;, &apos;true&apos;,
&apos;NO&apos;, &apos;false&apos;,
&apos;0&apos;, &apos;false&apos;,
&apos;FALSE&apos;, &apos;false&apos;,
&apos;null&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Boolean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Integer__c</fullName>
        <description>Convert an answer to and integer so it can be used in the dashboard</description>
        <formula>IF(ISNUMBER( Answer_Short_Text__c ), VALUE(Answer_Short_Text__c ), NULL)</formula>
        <label>Answer Integer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer_Short_Text__c</fullName>
        <description>A hidden field that will if possible store the answer text. Needed because we cannot use textarea types in formulas, which we need</description>
        <label>Answer Short Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>The raw answer that was collected from the submission</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Binding__c</fullName>
        <description>The binding on the survey form for the question that produced this answer</description>
        <label>Binding</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <description>The instance of this question</description>
        <label>Instance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Answer</label>
        <referenceTo>Submission_Answer__c</referenceTo>
        <relationshipLabel>Submission Answers</relationshipLabel>
        <relationshipName>Submission_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Binding__c</fullName>
        <description>The binding of the parent question that this question is a child of.</description>
        <label>Parent Binding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Instance__c</fullName>
        <description>The instance of the parent answer that this answer is a child of</description>
        <label>Parent Instance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>The number of the question on the survey that this answer relates to</description>
        <label>Question Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The display text for the question that this answer relates to</description>
        <label>Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Meta_Data__c</fullName>
        <description>The submission data that this answer is related to</description>
        <label>Submission Meta Data</label>
        <referenceTo>Submission_Meta_Data__c</referenceTo>
        <relationshipLabel>Submission Answers</relationshipLabel>
        <relationshipName>Submission_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Submission Answer</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Submission Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>